youfull/objects/Geo_to_Zone_Mapping__c.object
<CustomObject>
    <description>Maps Geo-Level 1/2/3/4 to a Zone (Sales Organization object)</description>
    <fields>
        <fullName>Geo_Level_1__c</fullName>
        <description>Region for Russia</description>
        <inlineHelpText>Region for Russia</inlineHelpText>
        <label>Geo Level 1</label>
        <referenceTo>Geo_Level_1__c</referenceTo>
        <relationshipLabel>Geo to Zone Mapping</relationshipLabel>
        <relationshipName>Geo_to_Zone_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geo_Level_2__c</fullName>
        <description>Area for Russia</description>
        <label>Geo Level 2</label>
        <referenceTo>Geo_Level_2__c</referenceTo>
        <relationshipLabel>Geo to Zone Mapping</relationshipLabel>
        <relationshipName>Geo_to_Zone_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geo_Level_3__c</fullName>
        <description>City for Russia</description>
        <label>Geo Level 3</label>
        <referenceTo>Geo_Level_3__c</referenceTo>
        <relationshipLabel>Geo to Zone Mapping</relationshipLabel>
        <relationshipName>Geo_to_Zone_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geo_to_Zone_Mapping_Key__c</fullName>
        <externalId>true</externalId>
        <label>Geo to Zone Mapping Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_CD__c</fullName>
        <description>Zone Code</description>
        <inlineHelpText>Zone Code</inlineHelpText>
        <label>SLS_ZONE_CD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Geo to Zone Mapping</label>
    <listViews>
        <fullName>All_Geo_to_Zone_Mappings</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Geo to Zone Mappings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GZ-{0}</displayFormat>
        <label>Geo to Zone Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geo to Zone Mapping</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>